1999-05-02  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (elcrule): Use $(shell cd $(dir $@); pwd) instead of
	$(dir $@), since Emacs for Windows loses with ./ derived from the
	latter (it can't be frozen due to files like common.el that are
	expected to be found in top_builddir).
	(Makefile.common $(SUBMAKEFILES)): Use $(abs_builddir) instead of
	$(dir $@).  Add SWARMSRCDIR in stub generation environment.

1999-04-30  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (C_EXTRA_DIST): Remove SwarmEnvironment.h.

	* java-stub.el (java-print-native-class): Don't include jni.h.

1999-04-27  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (JAVASWARMSCRIPTS): New substitution.
	(bin_SCRIPTS): Use it.
	(EXTRA_SCRIPTS: Add javacswarm and javaswarm.
	(EXTRA_DIST): Use it.
	
1999-04-25  Marcus G. Daniels  <mgd@helen.santafe.edu>

	* javaswarm, javacswarm: Adjust classpath per
	JAVA_CLASSES_INSTALLED_AS.

1999-04-25  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* java-stub.el (*removed-methods*): Switch getRetVal:buf: to
	getRetVal:. 

1999-04-23  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* javaswarm (JAVASWARMGDB): Use JAVAENV + JAVACMD with 
	JAVASWARMGDB as a hook for gdb (instead of just JAVA).
	Don't insist on arguments if JAVASWARMGDB is set.  
	Use CLASSPATH= instead of -classpath since GDB won't be
	able to cope with the arguments.

1999-04-21  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* java-stub.el (*objc-to-java-type-alist*): Handle unsigned short
	and short.  Map unsigned long to long, not int.
	(*removed-methods*): Don't include addArgument:ofObjCType:
	(from FArguments).
	(java-print-native-method): Handle Class.

	* Makefile.am (bin_SCRIPTS): Add javacswarm.

	* javacswarm: New file.

1999-04-20  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* java-stub.el (*objc-to-java-type-alist*): Don't treat Class as
	freaky.
	(*removed-protocols*): Remove Class-related excluded protocols.